--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prettier": "prettier src/**/*.js src/**/*.css --write --single-quote"
   }
 }
