--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "body-parser": "^1.18.1",
     "express": "^4.15.4",
-    "pg": "^7.3.0"
+    "pg": "^7.3.0",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "babel-plugin-syntax-async-functions": "^6.13.0",
