--- a/server/package.json
+++ b/server/package.json
@@ -21,8 +21,13 @@
   },
   "homepage": "https://github.com/pandey2770/react-redux-node-app#readme",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.15.4",
+    "express-session": "^1.15.6",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.3.0",
     "uuid": "^3.1.0"
   },
